# vsc2vim

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: cmd.rs  error.rs  lib.rs
